--- a/react/Minesweeper/package.json
+++ b/react/Minesweeper/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "solution",
+  "name": "widgets",
   "version": "1.0.0",
   "description": "This homework covers configuration of a new React project. Download the skeleton [here][skeleton].",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack"
+    "start": "webpack-dev-server --inline"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,10 @@
     "babel-preset-react": "^6.11.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "webpack": "^1.13.1"
+    "webpack": "^2.3.1",
+    "webpack-dev-server": "^2.4.2"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^2.4.2"
   }
 }
