--- a/react/Minesweeper/package.json
+++ b/react/Minesweeper/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "widgets",
+  "name": "minesweeper",
   "version": "1.0.0",
-  "description": "This homework covers configuration of a new React project. Download the skeleton [here][skeleton].",
-  "main": "index.js",
+  "description": "",
+  "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --inline"
+    "start": "webpack-dev-server",
+    "build": "webpack"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nkhem/app_academy.git"
+  },
   "dependencies": {
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "webpack": "^2.3.1",
-    "webpack-dev-server": "^2.4.2"
-  },
-  "devDependencies": {
-    "webpack-dev-server": "^2.4.2"
+    "babel-core": "^6.7.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7"
   }
 }
