--- a/react/todo_list/backend/package.json
+++ b/react/todo_list/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --inline"
+    "postinstall": "webpack",
+    "webpack": "webpack --watch"
   },
   "keywords": [],
   "author": "",
