--- a/react/pokedex/package.json
+++ b/react/pokedex/package.json
@@ -24,5 +24,10 @@
     "redux": "^3.6.0",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-preset-env": "^1.3.2"
   }
 }
